https://angular.dev/guide/forms/template-driven-forms\#add-a-new-actor

--- a/src/app/actor-form/actor-form.html
+++ b/src/app/actor-form/actor-form.html
@@ -1,26 +1,24 @@
-<style>
-  .no-style .ng-valid {
-    border-left: 1px  solid #CCC
-  }
-  .no-style .ng-invalid {
-    border-left: 1px  solid #CCC
-  }
-</style>
+{{model | json}}
+
 <div class="no-style" style="margin-left: 4px">
   <div class="container">
     <h1>Actor Form</h1>
-    <form>
+
+    <form #actorForm="ngForm">
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" required>
+        <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
+        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+          Invalid value
+        </div>
       </div>
       <div class="form-group">
         <label for="studio">Studio</label>
-        <input type="text" class="form-control" id="studio">
+        <input type="text" class="form-control" id="studio" [(ngModel)]="model.studio" name="studio">
       </div>
       <div class="form-group">
         <label for="skill">Skill</label>
-        <select class="form-control" id="skill" required>
+        <select class="form-control" id="skill" required [(ngModel)]="model.skill" name="skill">
           @for(skill of skills; track $index) {
             <option [value]="skill">{{ skill }}</option>
           }
@@ -28,18 +26,6 @@
       </div>
       <button type="submit" class="btn btn-success">Submit</button>
     </form>
-  </div>
 
-  <!-- EXTRA MATERIAL FOR DOCUMENTATION -->
-  <hr>
-  <input type="text" class="form-control" id="name"
-         required
-         [(ngModel)]="model.name" name="name">
-  TODO: remove this: {{ model.name}}
-  <hr>
-  <input type="text" class="form-control" id="name"
-         required
-         [ngModel]="model.name" name="name"
-         (ngModelChange)="model.name = $event">
-  TODO: remove this: {{ model.name}}
+  </div>
 </div>
